fix(profile-repository-idcard): visible show and margin

--- a/src/style/profile.sass
+++ b/src/style/profile.sass
@@ -57,6 +57,9 @@
     margin-left: 20px
 
   &-repo-list
+    *
+      padding: 0
+      margin: 0
     width: 90%
     .repository-card
       border: 1px solid #ddd
